--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-google-maps/api": "^2.20.6",
     "aws-sdk": "^2.1692.0",
     "next": "15.1.7",
     "react": "^19.0.0",
