--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.6",
     "aws-sdk": "^2.1692.0",
+    "framer-motion": "^12.4.5",
     "next": "15.1.7",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
