--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-google-maps/api": "^2.20.6",
     "aws-sdk": "^2.1692.0",
     "framer-motion": "^12.4.5",
+    "lucide-react": "^0.479.0",
     "next": "15.1.7",
     "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
